Ruslan_Makarevich/12.K8s.Data.Security/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  namespace: web-test
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nginx-test
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      volumes:
        - name: web-root
          emptyDir: {}
        - name: ssh-keys
          secret:
            secretName: nginx-ssh-secret   # <= этот Secret должен существовать в web-test
            defaultMode: 0600              # файлы ключей будут с правами 600
      containers:
        - name: nginx
          image: nginx:1.25
          ports:
            - containerPort: 80
          volumeMounts:
            - name: web-root
              mountPath: /usr/share/nginx/html
            - name: ssh-keys
              mountPath: /root/.ssh     # здесь появятся id_rsa и id_rsa.pub из секрета
              readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-test-svc
  namespace: web-test
spec:
  selector:
    app: nginx-test
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test-ingress
  namespace: web-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: nginx-test.k8s-5.sa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-test-svc
                port:
                  number: 80
